--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,27 @@
-<app-upload
-  [acceptTypes]="['application/pdf']"
-  (fileSelected)="fileAdded($event)"
-></app-upload>
-<app-preview></app-preview>
+<header>
+  <button mat-fab extended color="accent" type="button" (click)="input.click()">
+    <mat-icon>attach_file</mat-icon>
+    Pick a PDF-File
+  </button>
+</header>
+
+<main>
+  <app-preview></app-preview>
+</main>
+
+<footer>
+  <a mat-button color="primary" href="https://github.com/alexfriesen/pdf-tools">
+    PDF-Tools on github
+  </a>
+</footer>
+
+<div class="dropzone" [class.hovering]="isHovering">
+  <input
+    #input
+    hidden
+    type="file"
+    multiple
+    [accept]="acceptTypes.join('|')"
+    (change)="onFileChange($event)"
+  />
+</div>
