--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,6 +25,8 @@ main {
   left: 0;
   right: 0;
   bottom: 0;
+  user-select: none;
+  pointer-events: none;
 
   &.hovering {
     box-shadow: inset 0 0 20px #3f51b5, inset 0 0 20px #3f51b5,
