--- a/src/shared/components/preview/preview.component.scss
+++ b/src/shared/components/preview/preview.component.scss
@@ -1,7 +1,20 @@
+:host {
+  position: relative;
+}
+
+mat-progress-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
 .list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   justify-content: center;
+  margin: 1rem;
+  gap: 1rem;
 }
 
 .item {
@@ -18,6 +31,12 @@
     height: 100%;
     object-fit: contain;
   }
+}
+
+button.remove {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .cdk-drag-preview {
