--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,15 +8,18 @@ header,
 footer {
   display: flex;
   flex: 0 1 auto;
-  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+
   margin: 1rem;
 }
 
 main {
   display: flex;
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   flex-direction: column;
   width: 100%;
+  overflow: auto;
 }
 
 .dropzone {
