--- a/src/shared/components/preview/preview.component.html
+++ b/src/shared/components/preview/preview.component.html
@@ -1,24 +1,26 @@
-<canvas hidden #canvas height="0" width="0"></canvas>
-
 <mat-progress-bar
   [mode]="'indeterminate'"
   *ngIf="processing | async"
 ></mat-progress-bar>
 
-<div
-  cdkDropList
-  class="list"
-  *ngIf="pages | async as pages"
-  (cdkDropListDropped)="onChangePosition($event)"
->
-  <div cdkDrag class="item" *ngFor="let preview of pages">
-    <button
-      class="remove"
-      mat-mini-fab
-      (click)="onRemovePage(preview.pageIndex)"
-    >
-      <mat-icon>delete</mat-icon>
-    </button>
-    <img [src]="preview.base64" />
+<ng-template #empty>
+  <div class="empty">
+    <mat-icon color="accent">cloud_upload</mat-icon>
+    <p class="mat-headline-3">Drop in some PDF-Files</p>
   </div>
-</div>
+</ng-template>
+
+<ng-container *ngIf="pages | async as pages; else empty">
+  <div cdkDropList class="list" (cdkDropListDropped)="onChangePosition($event)">
+    <div cdkDrag class="item" *ngFor="let preview of pages">
+      <button
+        class="remove"
+        mat-mini-fab
+        (click)="onRemovePage(preview.pageIndex)"
+      >
+        <mat-icon>delete</mat-icon>
+      </button>
+      <img [src]="preview.base64" />
+    </div>
+  </div>
+</ng-container>
