--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -6,7 +6,7 @@
 <ng-template #empty>
   <div class="empty">
     <mat-icon color="accent">cloud_upload</mat-icon>
-    <p class="mat-headline-3">Drop in some PDF-Files</p>
+    <p class="mat-headline-3">{{ "drop here" | transloco }}</p>
   </div>
 </ng-template>
 
