🎨 simplify page layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-header></app-header>
+<app-header />
 
 <main>
-  <app-preview></app-preview>
+  <app-preview />
 </main>
 
 <div class="dropzone" [class.hovering]="isHovering"></div>
