⚡️ show thumbnails asap

--- a/src/app/components/preview/preview.component.html
+++ b/src/app/components/preview/preview.component.html
@@ -19,11 +19,7 @@
               <mat-icon>delete</mat-icon>
             </button>
 
-            @if(previewRenders(); as previews) {
-              <img [src]="previews | preview : page" />
-            } @else {
-              <mat-progress-spinner mode="indeterminate" />
-            }
+            <app-thumb [pageIndex]="page" />
           </div>
         </span>
       } @empty {}
