--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <mat-toolbar color="primary">
-    <span>PDF Tools</span>
+    <span class="title"><img src="/assets/pdf.svg" alt="PDF"> Tools</span>
     <div class="end">
       @if (!hasDocument()) {
         <button mat-fab extended color="accent" (click)="onOpenFilePrompt()">
