--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,4 +10,9 @@ body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 @import './styles/loading.scss';
