♿️ always show loading bar

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -37,11 +37,11 @@
       </mat-menu>
     </div>
   </mat-toolbar>
-
-  @if (isProcessing()) {
-    <mat-progress-bar mode="indeterminate" />
-  }
 </header>
+
+@if (isProcessing()) {
+  <mat-progress-bar mode="indeterminate" color="accent" />
+}
 
 @if (hasDocument()) {
   <div class="actions">
