🐛 show app-empty after clearing the document

--- a/src/app/components/preview/preview.component.html
+++ b/src/app/components/preview/preview.component.html
@@ -1,5 +1,7 @@
-@defer (when hasDocument()) {
-  <app-pages />
-} @placeholder {
+@if(hasDocument()) {
+  @defer {
+    <app-pages />
+  }
+} @else {
   <app-empty />
 }
