💄 change props icon

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -25,7 +25,7 @@
       <mat-menu #moreMenu="matMenu">
         @if (hasDocument()) {
           <button mat-menu-item (click)="onOpenProperties()">
-            <mat-icon>properties</mat-icon>
+            <mat-icon>settings</mat-icon>
             {{ 'properties.link' | transloco }}
           </button>
         }
