fix: show attachments as list

--- a/src/app/components/attachments/attachments.component.html
+++ b/src/app/components/attachments/attachments.component.html
@@ -4,24 +4,30 @@
   </mat-expansion-panel-header>
 
   <ng-template matExpansionPanelContent>
-    @for (attachment of attachments(); track attachment.name) {
-    <div class="item">
-      <button class="tool" mat-mini-fab (click)="inspectAttachment(attachment)">
-        <mat-icon>search</mat-icon>
-      </button>
+    <div class="list">
+      @for (attachment of attachments(); track attachment.name) {
+      <div class="item">
+        <button
+          class="tool"
+          mat-mini-fab
+          (click)="inspectAttachment(attachment)"
+        >
+          <mat-icon>search</mat-icon>
+        </button>
 
-      @if (attachment.mimeType.includes('image/')) {
-      <mat-icon class="icon large" svgIcon="image" />
-      } @else if (attachment.mimeType.includes('xml')) {
-      <mat-icon class="icon large" svgIcon="xml" />
-      } @else {
-      <mat-icon class="icon large" svgIcon="unknown" />
-      }
+        @if (attachment.mimeType.includes('image/')) {
+        <mat-icon class="icon large" svgIcon="image" />
+        } @else if (attachment.mimeType.includes('xml')) {
+        <mat-icon class="icon large" svgIcon="xml" />
+        } @else {
+        <mat-icon class="icon large" svgIcon="unknown" />
+        }
 
-      <div class="truncate">
-        {{ attachment.name }}
+        <div class="truncate">
+          {{ attachment.name }}
+        </div>
       </div>
+      } @empty {}
     </div>
-    } @empty {}
   </ng-template>
 </mat-expansion-panel>
