--- a/src/app/components/attachments/attachments.component.scss
+++ b/src/app/components/attachments/attachments.component.scss
@@ -6,6 +6,15 @@
   padding-right: 6rem;
 }
 
+.list {
+  display: flex;
+  flex: 0 1 auto;
+  flex-wrap: wrap;
+  flex-direction: row;
+  box-sizing: border-box;
+  overflow: auto;
+}
+
 .item {
   position: relative;
   border-radius: 0.25rem;
@@ -18,6 +27,7 @@
   box-sizing: border-box;
 
   margin: 0.5rem;
+  padding: 0.5rem;
   max-width: 200px;
 
   &:hover {
@@ -32,9 +42,9 @@
 }
 
 .icon.large {
-  font-size: 3rem;
-  width: 3rem;
-  height: 3rem;
+  font-size: 5rem;
+  width: 5rem;
+  height: 5rem;
 }
 
 .truncate {
