chore(deps): update to angular 19 RC

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import './styles/fonts.scss';
+@use './styles/fonts.scss';
+@use './styles/loading.scss';
 
 html,
 body {
@@ -14,5 +15,3 @@ body {
   display: flex;
   flex-direction: column;
 }
-
-@import './styles/loading.scss';
